# git_clons

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
git_clons/: Makefile  logic.py  main.py  pars_git.py
git_clons/docs/source/: conf.py  index.rst
git_clons/test/: .look.json  test_main.py
git_clons/test/dataset/: gitconf.json
